Update scripts to work with Graal.